cmake_minimum_required(VERSION 3.28)
project(c__)

set(CMAKE_CXX_STANDARD 17)

add_executable(c__
        main.cpp
        hppSave.h
        showMenu.cpp
        AddPreson.cpp
        ShowPreson.cpp
        IsList.cpp
        DeletePreson.cpp
        FindPreson.cpp
        ModifPreson.cpp
        CleanPreson.cpp
)
